# RAG-Anything

./: .dockerignore  .env  .gitignore  .gitignore.bak  00_STATE.md  01_REPO_MAP.md  05_PR_CANDIDATES.md  06_SELECTED_5_PR_PLAN.md  AUTOMATED_PUSH_SOLUTIONS.md  CHANGELOG.docx  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  CREATE_PR_FINAL.md  CREATE_PR_MANUAL.md  DATASET_IMAGES_ADDED.md  DATASET_IMAGES_SETUP.md  Dockerfile  FINAL_AUTOMATION_SUMMARY.md  FINAL_COMMIT_INSTRUCTIONS.md  FINAL_PR_SUMMARY.md  FIX_GIT_LFS_PUSH_ERROR.md  FIX_PUSH_AUTH.md  FIX_PUSH_ERROR.md  GITHUB_COMMIT_RECOMMENDATIONS.md  GITHUB_PRE_COMMIT_CHECKLIST.md  GIT_LFS_ERROR_SOLUTION.md  GIT_STATUS_VERIFICATION.md  MANIFEST.in  MANUAL_PR_GUIDE.md  PR_FINAL_SUMMARY.md  PR_INSTRUCTIONS.md  PR_READY.md  PUSH_CLEAN_BRANCH.md  PUSH_INSTRUCTIONS_FINAL.md  PUSH_PERMISSION_ISSUE.md  PUSH_SOLUTION.md  RAG-Anything二次开发综合分析报告.docx  RAG-Anything功能实现详解(非技术版).docx  (+59 more)
.github/workflows/: linting.yaml  test.yaml
_archive_2025-10-16/: SPIQA_test_misc.tar  assets.tar  docs.tar  examples.tar  test.tar  testb_analysis_reports.tar  testb_core_files.tar
data/chatgpt/: test5_questions_20260314_135806.json  test5_questions_20260314_140158.json  test5_questions_20260314_140721.json
data/testdata/: test5_questions.json
docs/: RAG_ANYTHING_STUDIO_CODEX_DEV_GUIDE.md  api_reference.md  architecture.md  batch_processing.md  enhanced_markdown.md  multimodal_rag_failure_modes.md
examples/: chatgpt_eval.py  enhanced_markdown_example.py  insert_content_list_example.py  modalprocessors_example.py  page_entity_topic_relation_text_only_example.py  page_topic_extraction_example.py  page_topic_relation_example.py  page_topics_real_llm.py  raganything_example.py  vietnamese_text_processing.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminUsersPage.jsx  AgentChatPage.jsx  AgentsPage.jsx  KnowledgePage.jsx  LoginPage.jsx  MonitorPage.jsx  QueryPage.jsx  RegisterPage.jsx  SettingsPage.jsx  UploadPage.jsx
frontend/src/utils/: api.js
project_zjh/: README.md
python-api/: .pre-commit-config.yaml  Makefile  PRODUCTION_READY.md  PRODUCTION_STATUS.md  README.md  check_lightrag.py  prometheus.yml  pyproject.toml
python-api/.github/workflows/: test.yml
python-api/docs/: api-spec.md  architecture.md  implementation-checklist.md  project-brief.md  requirements.md  tech-stack.md  user-stories.md
python-api/scripts/: generate_test_data.py  run_tests.sh
python-api/storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_parse_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
python-api/storage/storage/: kv_store_parse_cache.json
python-api/tests/: __init__.py  conftest.py
python-api/tests/e2e/: __init__.py
python-api/tests/performance/: __init__.py  locustfile.py
python-api/tests/utils/: factories.py  helpers.py  reporting.py
rag_agent/agent/: __init__.py  context.py  loop.py  validate_loop.py  validate_session_loop.py
rag_agent/agent/tools/: __init__.py  generate.py  retrieve.py  validate_generate_tool.py  validate_retrieve_generate_flow.py  validate_retrieve_tool.py
rag_agent/llm/: __init__.py  base.py  validate_openai_provider.py
raganything/: __init__.py  asset_urls.py  batch.py  batch_parser.py  chunking.py  config.py  modalprocessors.py  modalprocessors_audio.py  modalprocessors_video.py  optimized parser.py  parser.py  processor.py  prompt.py  query.py  query_utils.py  raganything.py  twelvelabs.py  utils.py
raganything_studio/: __init__.py  __main__.py
raganything_studio/backend/: __init__.py  app.py  config.py  dependencies.py
raganything_studio/backend/api/: __init__.py  documents.py  graph.py  health.py  jobs.py  query.py  settings.py
raganything_studio/backend/core/: document_store.py  errors.py  job_manager.py  settings_store.py
raganything_studio/backend/schemas/: document.py  graph.py  job.py  query.py  settings.py
raganything_studio/backend/services/: content_list_service.py  raganything_service.py
raganything_studio/backend/static/: index.html
raganything_studio/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
raganything_studio/frontend/src/: App.tsx  styles.css
raganything_studio/frontend/src/api/: client.ts
test/: Backup_Origin_Tester.py
testing/: test_spiqa_testa.py  test_spiqa_testb_simple.py
tests/: test_agent_isolation.py  test_asset_urls.py  test_audio_processor.py  test_auth.py  test_close_event_loop.py  test_content_list_alias_handling.py  test_image_la_alpha_composite.py  test_incremental_folder_scan.py  test_md_pdf_escape.py  test_modalprocessors_config.py  test_parallel_processing.py  test_parser_url_download.py  test_twelvelabs_integration.py  test_utils.py  test_video_processor.py  testbatch_incremental.py  testbatch_mixin.py  testparser_kwargs.py
tests/studio/: test_studio_core.py
tools/: create_flow_and_overviews.py  create_spiqa_highres_dashboard.py
visualizations/: latency.csv  routing.csv
visualizations/.mplconfig/: fontlist-v390.json
webapp/: __init__.py  main.py
webapp/static/: index.html
work-space/: README.md  app.py  benchmark_report.csv  gold_dataset.json  pruning_benchmark.csv  run_bench.py  run_extract_bench.py  run_pipeline_qa_eval.py  run_postprocess_bench.py  run_pruning_bench.py  run_retrieval_bench.py
work-space/datasets/parser_benchmark/: README.md
work-space/src/: config.py  custom_prompts.py  definitions.py  engine.py  evaluator.py  extract_definitions.py  extract_metrics.py  metrics.py  models.py  pruning_evaluator.py  qa_engine.py  visualizer.py
work-space/src/extraction/: metrics.py
work-space/src/prompts/: __init__.py  medical.py
work-space/src/pruning/: semantic_summary.py
work-space/src/workbench/: __init__.py
(+67 files in other folders)
